# smoke-signal

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  config.yaml  config.yaml.example  pyproject.toml
installer/: Install-SmokeSignal.bat  Install-SmokeSignal.ps1  Uninstall-SmokeSignal.ps1  install-mac.sh
scripts/: enroll.bat  start-watcher.bat  transcribe-work.bat  transcribe.bat
src/scribe/: __init__.py  cli.py  config.py  gpu.py  models.py
src/scribe/enrollment/: manager.py  matcher.py
src/scribe/output/: markdown.py
src/scribe/pipeline/: local.py
src/smoke_signal/: __init__.py  audio.py  cli.py  config.py  gpu.py  icon.py  setup_wizard.py  tray_entry.py
src/smoke_signal/enrollment/: manager.py  matcher.py
src/smoke_signal/output/: markdown.py
src/smoke_signal/pipeline/: local.py
src/smoke_signal/platform/: __init__.py  _macos.py  _router.py  _windows.py
src/smoke_signal/watcher/: __init__.py  classifier.py  daemon.py  dashboard.py  job.py  monitor.py  notifier.py  queue.py  state.py  tray.py
