[project]
name = "scribe"
version = "0.1.0"
description = "Local-first audio transcription with speaker diarization"
requires-python = ">=3.11,<3.13"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "torch>=2.10.0",
    "whisperx>=3.3",
    "pyannote.audio>=3.3,<4.0",
    "numpy>=1.26,<2.0",
]

[project.scripts]
scribe = "scribe.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]
